--- a/ch01/ex03.html
+++ b/ch01/ex03.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>First-scene</title>
+	<title>material-light</title>
 <script type="text/javascript" src="../libs/three.js"></script>
 <script type="text/javascript" src="../libs/jquery-2.1.4.min.js"></script>
 <style type="'text/css'">
