--- a/ch02/ex01.html
+++ b/ch02/ex01.html
@@ -45,49 +45,30 @@
 		renderer.setSize(window.innerWidth, window.innerHeight);
 		renderer.shadowMapEnabled = true;
 
-		var planeGeometry = new THREE.PlaneGeometry(60, 20, 1, 1);
+		var planeGeometry = new THREE.PlaneGeometry(60, 40, 1, 1);
 		var planeMaterial = new THREE.MeshLambertMaterial({color: 0xffffff});
 		var plane = new THREE.Mesh(planeGeometry, planeMaterial);
 		plane.receiveShadow = true;
 
 		plane.rotation.x = -0.5 * Math.PI;
-		plane.position.x = 15;
+		plane.position.x = 0;
 		plane.position.y = 0;
 		plane.position.z = 0;
-
+		//在场景中添加某物体
 		scene.add(plane);
-
-		var cubeGeometry = new THREE.BoxGeometry(4, 4, 4);
-		var cubeMaterial = new THREE.MeshLambertMaterial({color: 0xff0000 });
-		var cube = new THREE.Mesh(cubeGeometry, cubeMaterial);
-		cube.castShadow = true;
-
-		cube.position.x = -4;
-		cube.position.y = 3;
-		cube.position.z = 0;
-
-		scene.add(cube);
-
-		var sphereGeometry = new THREE.SphereGeometry(4, 20, 20);
-		var sphereMaterial = new THREE.MeshLambertMaterial({color: 0x7777ff});
-		var sphere = new THREE.Mesh(sphereGeometry, sphereMaterial);
-		sphere.castShadow = true;
-
-		sphere.position.x = 20;
-		sphere.position.y = 4;
-		sphere.position.z = 2;
-
-		scene.add(sphere);
 
 		camera.position.x = -30;
 		camera.position.y = 40;
 		camera.position.z = 30;
 		camera.lookAt(scene.position);
-
-		var spotLight = new THREE.SpotLight( 0xffffff );
+		//环境光
+		var ambientLight = new THREE.AmbientLight(0x0c0c0c);
+		scene.add(ambientLight);
+		//聚光灯光源
+		var spotLight = new THREE.SpotLight(0xffffff);
 		spotLight.position.set( -40, 60, -10);
 		spotLight.castShadow = true;
-		scene.add( spotLight );
+		scene.add(spotLight);
 
 		$('#WebGL-output').append(renderer.domElement);
 		
@@ -97,38 +78,82 @@
 		//定义两个属性旋转速度和弹跳速度
 		var controls = new function () {
 			this.rotationSpeed = 0.02;
-			this.bouncingSpeed = 0.03;
+			this.numberOfObjects = scene.children.length;
+
+			//点击移除最后添加的一个cube
+			this.removeCube = function () {
+				//获取场景中所有子对象的列表
+				var allChildren = scene.children;
+				var lastObeject = allChildren[allChildren.length - 1];
+				if (lastObeject instanceof THREE.Mesh) {
+					//从场景中移除某物体
+					scene.remove(lastObeject);
+					this.numberOfObjects = scene.children.length;
+				}
+			}
+
+			//点击生成新的cube
+			this.addCube = function () {
+
+				var cubeSize = Math.ceil((Math.random() * 3));
+				var cubeGeometry = new THREE.BoxGeometry(cubeSize, cubeSize, cubeSize);
+				var cubeMaterial = new THREE.MeshLambertMaterial({color: Math.random() * 0xffffff});
+
+				var cube = new THREE.Mesh(cubeGeometry, cubeMaterial);
+				cube.castShadow = true;
+				cube.name = 'cube-' + scene.children.length;
+
+				cube.position.x = -30 + Math.round((Math.random() * planeGeometry.parameters.width));
+				cube.position.y = Math.round((Math.random() * 5));
+				cube.position.z = -20 + Math.round((Math.random() * planeGeometry.parameters.height));
+
+				scene.add(cube);
+				this.numberOfObjects = scene.children.length;
+
+			};
+
+			this.outputObjects = function () {
+				console.log(scene.children);
+			};
 		};
 
 		var gui = new dat.GUI();
 		//两个控制的取值范围都是0——0.5
 		gui.add(controls, 'rotationSpeed', 0, 0.5);
-		gui.add(controls, 'bouncingSpeed', 0, 0.5);
+		gui.add(controls, 'addCube');
+		gui.add(controls, 'removeCube');
+		gui.add(controls, 'outputObjects');
+		gui.add(controls, 'numberOfObjects').listen();
 
-		renderScene();
+		render();
 
-		function renderScene() {
+		function render() {
 			stats.update();
-			//在循环里面直接引用上面那两个属性
-			cube.rotation.x += controls.rotationSpeed;
-			cube.rotation.y += controls.rotationSpeed;
-			cube.rotation.z += controls.rotationSpeed;
+			//试用traverse()函数类更新每个方块的旋转弧度
+			scene.traverse(function (e){
+				if (e instanceof THREE.Mesh && e != plane) {
+					e.rotation.x += controls.rotationSpeed;
+					e.rotation.y += controls.rotationSpeed;
+					e.rotation.z += controls.rotationSpeed;
+				}
+			}); 
+			
 
-			step += controls.bouncingSpeed;
-			sphere.position.x = 20 + ( 10 * (Math.cos(step)));
-			sphere.position.y = 2 + (10 * Math.abs(Math.sin(step)));
-
-			requestAnimationFrame(renderScene);
+			requestAnimationFrame(render);
 			renderer.render(scene, camera);
 		}	
 
 		function initStats() {
 			var stats = new Stats();
+
 			stats.setMode(0);
+
 			stats.domElement.style.position = 'absolute';
 			stats.domElement.style.left = '0px';
 			stats.domElement.style.top = '0px';
+
 			$("#Stats-output").append(stats.domElement);
+
 			return stats;
 		}
 	});
@@ -141,6 +166,7 @@
 	}
 	//监听resize事件
 	window.addEventListener('resize', onResize, false);
+	//另外还有一个Scene.getChildByname(): 利用name属性，获取场景中某个特定的物体
 </script>
 
 	
